# rust_graphql_realworld

./: Cargo.toml
migrations/2021-05-03-100741_create_users/: up.sql
migrations/2021-05-03-100741_create_users/src/: schema.rs
migrations/2021-06-02-211300_create_follows/: up.sql
migrations/2021-06-03-195907_create_article/: down.sql  up.sql
migrations/2021-06-26-173403_create_user_favorites_article/: down.sql  up.sql
src/: db.rs  db_schema.rs  main.rs  schema.rs
src/article/: db.rs  errors.rs  mod.rs  model.rs  resolvers.rs
src/user/: auth.rs  db.rs  errors.rs  mod.rs  model.rs  resolvers.rs
