[package]
name = "hello-actix-graphql"
version = "0.1.0"
authors = ["hamza0867 <hamza0867@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3"
juniper = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
bcrypt = "0.9.0"
jsonwebtoken = "7"
chrono = "0.4"
actix-web-httpauth = "0.5"
 slugify = "0.1.0"
